# gdg-ai-hack

./: .env.example  .gitignore  README.md  audio.py  gui.py  justfile  main.py  pyproject.toml  synthesizer.py
agents/call-assistant-agent/: agent.py
agents/call_assistant_agent/: agent.py
call_reports/: api.py  models.py  reports.py
