[project]
name = "gdg-ai-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.13",
    "langchain-google-genai>=0.0.5",
    "google-generativeai>=0.3.0",
    "langgraph>=0.4.3",
    "motor>=3.7.0",
    "numpy>=2.2.5",
    "python-dotenv>=1.0.0",
    "psutil>=7.0.0",
    "pyaudio>=0.2.14",
    "pydantic>=2.11.4",
    "pymongo[srv]>=4.12.1",
    "pynput>=1.8.1",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]
